FIX. Banner fix.

--- a/src/Presentation/FrontEnd/PublicWebApp/Views/Banner/MultiBanner.cshtml
+++ b/src/Presentation/FrontEnd/PublicWebApp/Views/Banner/MultiBanner.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VirtoCommerce.Web.Core.DataContracts.Contents.DynamicContentItemGroup>
+﻿@model IEnumerable<VirtoCommerce.ApiClient.DataContracts.Contents.DynamicContentItemGroup>
 
 @foreach (var group in Model)
 {
