--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -2303,7 +2303,7 @@ h3
 		.table-col .table-t
 		{
             font-size: 14px;
-			font-weight: 600;
+			font-weight: 500;
 			margin: 0 0 5px;
 		}
 
@@ -2466,7 +2466,7 @@ fieldset + fieldset
 
 .form
 {
-	margin: 15px 0;
+	padding: 15px 0;
 }
 
 .form-group + .form-group
@@ -2524,7 +2524,7 @@ fieldset + fieldset
 
     .form-input.__number
     {
-        position: relative;
+        height: 34px;
     }
 
     .form-group .form-t
@@ -2747,6 +2747,7 @@ fieldset + fieldset
         display: inline-block;
         height: 12px;
         position: relative;
+        top: -2px;
     }
 
     .form-control
