--- a/src/Presentation/WebAdmin/Design/css/cosmetic.css
+++ b/src/Presentation/WebAdmin/Design/css/cosmetic.css
@@ -226,3 +226,27 @@ a:hover,
 		background-position: -30px 0;
 	}
 }
+
+@-webkit-keyframes loading
+{
+	from {  }
+	to {  }
+}
+
+@keyframes loading
+{
+	0%
+	{
+		width: 0;
+	}
+
+	75%
+	{
+		width: 100%;
+	}
+
+	100%
+	{
+		width: 100%;
+	}
+}
