--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/reset.css
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/reset.css
@@ -19,3 +19,11 @@ body
 	font-size: 100%;
 	line-height: 1.4;
 }
+
+.clearfix:after
+{
+	clear: both;
+	content: '';
+	display: block;
+	font-size: 0;
+}
