--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/project-modules.css
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/project-modules.css
@@ -178,3 +178,33 @@
     {
         color: #e51400;
     }
+
+
+/* Prices */
+.list.__prices
+{
+    background: #fbfdfe;
+    height: 100%;
+    padding: 0 20px;
+    text-align: left;
+}
+
+    .list.__prices .list-item
+    {
+        font-size: 14px;
+        padding: 4px 0;
+    }
+
+    .list.__prices .list-item.__total
+    {
+        border-top: 1px solid #dee9f0;
+        color: #43b0e6;
+        padding: 5px 0 0;
+    }
+
+    .list.__prices .list-price
+    {
+        float: right;
+        font-weight: 500;
+        margin: 0 0 0 10px;
+    }
