--- a/src/Presentation/WebAdmin/Design/css/base-modules.css
+++ b/src/Presentation/WebAdmin/Design/css/base-modules.css
@@ -2783,6 +2783,11 @@ h3
             box-shadow: none;
 }
 
+.error
+{
+    color: #e51400;
+}
+
 .form-input input.ng-invalid,
 .form-input textarea.ng-invalid,
 .form-input input:focus.ng-invalid,
@@ -2922,11 +2927,9 @@ fieldset + fieldset
 					box-sizing: border-box;
 		}
 
-        .form-input.__mini input,
-        .form-input.__mini textarea,
-        .form-input.__mini select
+        .form-input.__mini
         {
-            width: 80px;
+            width: 60px;
         }
 
         .form-input input,
@@ -2963,7 +2966,7 @@ fieldset + fieldset
 
         .form-input.__number input
         {
-            padding-right: 36px;
+            padding-right: 20px;
         }
 
         .form-input select
@@ -2998,7 +3001,7 @@ fieldset + fieldset
             height: 14px;
             right: 2px;
             position: absolute;
-            width: 25px;
+            width: 16px;
 
             -webkit-box-sizing: border-box;
                     box-sizing: border-box;
@@ -4282,6 +4285,11 @@ fieldset + fieldset
             box-sizing: border-box;
 }
 
+.tree-block:hover
+{
+    background: #ecf7fc;
+}
+
 .tree-block.__selected
 {
     background: #d9effa;
@@ -4322,13 +4330,6 @@ fieldset + fieldset
 .first > :first-child:before
 {
     display: none;
-}
-
-.first > :first-child,
-.first > :first-child.__selected
-{
-    background: #ecf7fc;
-    border-color: #a1c0d4;
 }
 
 .tree-block:before
@@ -4400,20 +4401,6 @@ fieldset + fieldset
     position: absolute;
     width: 20px;
 }
-
-
-/* Order */
-.form-group.__order-currency
-{
-    padding: 0 0 0 20px;
-}
-
-    .form-group.__order-currency .form-input
-    {
-        display: inline-block;
-        margin: 0 0 0 5px;
-        width: 100px;
-    }
 
 
 /* Columns */
