--- a/src/Presentation/WebAdmin/Design/css/cosmetic.css
+++ b/src/Presentation/WebAdmin/Design/css/cosmetic.css
@@ -229,162 +229,103 @@ a:hover,
 }
 
 /* Preloaders */
-@-webkit-keyframes preloader_1
-{
-	
-}
-
-@keyframes preloader_1
+@-webkit-keyframes loader
 {
 	0%
 	{
-		background: #dee9f0;
-		height: 0;
+		opacity: 0;
+
+		filter: alpha(opacity=0);
+
+		-webkit-transform: translateX(0);
 	}
 
-	25%
+	30%
 	{
-		background: #43b0e6;
-		height: 50px;
+		opacity: 1;
+
+		filter: alpha(opacity=100);
+
+		-webkit-transform: translateX(120px);
 	}
 
-	50%
+	60%
 	{
-		background: #dee9f0;
-		height: 0;
+		opacity: 1;
+
+		filter: alpha(opacity=100);
+
+		-webkit-transform: translateX(120px);
+	}
+
+	90%
+	{
+		opacity: 0;
+
+		filter: alpha(opacity=0);
+
+		-webkit-transform: translateX(500px);
 	}
 
 	100%
 	{
-		background: #dee9f0;
-		height: 0;
+		opacity: 0;
+
+		filter: alpha(opacity=0);
+
+		-webkit-transform: translateX(500px);
 	}
 }
 
-@keyframes preloader_2
-{
-	0%
-	{
-		background: #dee9f0;
-		height: 10px;
-
-
-	}
-
-	25%
-	{
-		background: #43b0e6;
-		height: 50px;
-
-		
-	}
-
-	50%
-	{
-		background: #dee9f0;
-		height: 10px;
-
-
-	}
-
-	100%
-	{
-		background: #dee9f0;
-		height: 10px;
-
-
-	}
-}
-
-@keyframes preloader_3
-{
-	0%
-	{
-		background: #43b0e6;
-		transform: translateY(0);
-	}
-
-	25%
-	{
-		background: #dee9f0;
-		transform: translateY(-15px);
-	}
-
-	50%
-	{
-		background: #dee9f0;
-		transform: translateY(0);
-	}
-
-	75%
-	{
-		background: #dee9f0;
-		transform: translateY(15px);
-	}
-
-	100%
-	{
-		background: #dee9f0;
-		transform: translateY(0);
-	}
-}
-
-@keyframes preloader_4
+@keyframes loader
 {
 	0%
 	{
 		transform: translateX(0);
+
 		opacity: 0;
+
+		filter: alpha(opacity=0);
+	
 	}
 
 	30%
 	{
 		transform: translateX(120px);
+
 		opacity: 1;
+
+		filter: alpha(opacity=100);
+	
 	}
 
 	60%
 	{
 		transform: translateX(120px);
+
 		opacity: 1;
+
+		filter: alpha(opacity=100);
+	
 	}
 
 	90%
 	{
 		transform: translateX(500px);
+
 		opacity: 0;
+
+		filter: alpha(opacity=0);
+	
 	}
 
 	100%
 	{
 		transform: translateX(500px);
+
 		opacity: 0;
-	}
-}
 
-@keyframes preloader_5
-{
-	0%
-	{
-		background: #dee9f0;
-		height: 0;
-	}
-
-	25%
-	{
-		background: #43b0e6;
-		height: 50px;
-	}
-
-	50%
-	{
-		background: #dee9f0;
-		height: 0;
-	}
-
-	100%
-	{
-		background: #dee9f0;
-		height: 0;
+		filter: alpha(opacity=0);
+	
 	}
 }
