--- a/src/Presentation/WebAdmin/Design/css/project-modules.css
+++ b/src/Presentation/WebAdmin/Design/css/project-modules.css
@@ -230,6 +230,7 @@
 
 .table .table-item.__total .table-col
 {
+    border-bottom: none;
     font-size: 20px;
 }
 
@@ -246,18 +247,74 @@
     }
 
 
+.table .table-col.__total
+{
+    max-width: 58px;
+    min-width: 58px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.table .table-col.__date,
+.table .table-col.__author,
+.table .table-col.__version
+{
+    font-size: 12px;
+    vertical-align: top;
+    width: 20%;
+}
+
+.table .table-col.__author
+{
+    color: #999;
+}
+
+.table .table-col.__version
+{
+    width: 10%;
+}
+
+.table .table-col.__blue
+{
+    color: #43b0e6;
+}
+
+.table .table-col.__product-control
+{
+    width: 20px;
+}
+
+.table .table-col.__product-img
+{
+    width: 60px;
+}
+
+.table .table-col.__product-name
+{
+    max-width: 250px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.table .table-col.__product-code
+{
+    white-space: nowrap;
+}
+
+
 /* Loader */
 .loader
 {
     display: block;
+    height: 75px;
     margin: 0 auto;
-    padding: 50px 0;
     width: 350px;
 }
 
     .loader span
     {
-        bottom: auto;
+        background: #dee9f0;
         height: 20px;
         top: 25px;
         width: 20px;
