--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Google fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Exo+2:300,400,500,600,400italic,700,800,500italic,600italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Exo+2:400,300,500,600,400italic&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
     @Styles.Render("~/css/core")
     @Styles.Render("~/css/modules")
