--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -2597,6 +2597,13 @@ fieldset + fieldset
             padding-left: 36px;
         }
 
+        .form-input.__currency input,
+        .form-input.__currency textarea,
+        .form-input.__currency select
+        {
+            padding-right: 40px;
+        }
+
         .form-input.__number input
         {
             padding-right: 20px;
@@ -2680,6 +2687,16 @@ fieldset + fieldset
             left: 11px;
             position: absolute;
             top: 11px;
+            z-index: 50;
+        }
+
+        .form-input.__currency .currency
+        {
+            color: #43b0e6;
+            font-size: 12px;
+            right: 10px;
+            position: absolute;
+            top: 10px;
             z-index: 50;
         }
 
@@ -4128,6 +4145,64 @@ fieldset + fieldset
 {
     margin-left: 10px;
 }
+
+
+/* Loader */
+.loader
+{
+    display: block;
+    height: 75px;
+    margin: 0 auto;
+    position: relative;
+    width: 350px;
+}
+
+    .loader span
+    {
+        background: #dee9f0;
+        height: 20px;
+        position: absolute;
+        top: 25px;
+        width: 20px;
+
+        -webkit-animation: loader 2.5s infinite ease;
+                animation: loader 2.5s infinite ease;
+    }
+
+    .loader span:nth-child(1)
+    {
+        -webkit-animation-delay: .8s;
+                animation-delay: .8s;
+    }
+
+    .loader span:nth-child(2)
+    {
+        left: 30px;
+
+        -webkit-animation-delay: .6s;
+                animation-delay: .6s;
+    }
+
+    .loader span:nth-child(3)
+    {
+        left: 60px;
+
+        -webkit-animation-delay: .4s;
+                animation-delay: .4s;
+    }
+
+    .loader span:nth-child(4)
+    {
+        left: 90px;
+
+        -webkit-animation-delay: .2s;
+                animation-delay: .2s;
+    }
+
+    .loader span:nth-child(5)
+    {
+        left: 120px;
+    }
 
 
 
